# NexusCockpit

./: .editorconfig  .env  .env.example  .gitignore  .pre-commit-config.yaml  Agent.md  LICENSE  Makefile  Project_Review_and_Fix_Report.md  README.md  docker-compose.yml  修复报告.md  项目全面审核分析报告.md
backend_design/: Dockerfile  pyproject.toml  requirements.txt  requirements_no_torch.txt
backend_design/nexus/: __init__.py  config.py  main.py
backend_design/nexus/agent/: executor.py  graph.py  mainagent_confirm.py  planner.py  responder.py  reviewer.py  subagent_monitor.py  supervisor_graph.py
backend_design/nexus/api/: __init__.py  websocket.py
backend_design/nexus/asr/: engine.py
backend_design/nexus/core/: auth.py  circuit_breaker.py  cockpit_manager.py  db_manager.py  exceptions.py  logger.py  oss.py  personalization.py  ssl_fix.py  tenant_context.py  voiceprint.py
backend_design/nexus/intent/: constants.py  heuristic.py  llm_router.py  router.py
backend_design/nexus/mcp/: gateway.py
backend_design/nexus/memory/: __init__.py  compressor.py  conflict.py  manager.py
backend_design/nexus/middleware/: __init__.py  rate_limiter.py  redis_cache.py  session_store.py  task_queue.py
backend_design/nexus/models/: cockpit.py  schemas.py  state.py
backend_design/nexus/observability/: cockpit_metrics.py  data_retention.py  langfuse.py  metrics.py
backend_design/nexus/prompts/: __init__.py  chat.md  clarification.md  memory_extract.md  search.md  vehicle.md
backend_design/nexus/rag/: aura_graph_store.py  cherry_kb.py  embedding.py  graph_base.py  graph_factory.py  graph_store.py  reranker.py  reranker_base.py  reranker_factory.py  retriever.py  siliconflow_reranker.py  (+5 more)
backend_design/nexus_gate/: Dockerfile  go.mod  go.sum
backend_design/scripts/: chaos_test.py  gen_music.py  init_milvus.py  init_neo4j.py  test_api.py  test_db.py  test_metrics.py  v2.1_migration.sql
backend_design/tests/: test_api.py  test_core.py  test_v21.py
(+965 files in other folders)
